[gd_scene load_steps=22 format=3 uid="uid://c3ubppnvpbakx"]

[ext_resource type="Script" path="res://Main.gd" id="1_x0xpo"]
[ext_resource type="Script" path="res://ToolHandler.gd" id="2_31xt7"]
[ext_resource type="Theme" uid="uid://cwwiwmiptq31v" path="res://Pause.tres" id="3_1rns0"]
[ext_resource type="Script" path="res://ApplicationHandler.gd" id="3_6aesa"]
[ext_resource type="Theme" uid="uid://c7eoemnuh70i0" path="res://Env_verde.tres" id="4_8eunh"]
[ext_resource type="Script" path="res://DialogHandler.gd" id="4_l3v62"]
[ext_resource type="FontFile" uid="uid://duu8whkrbirv1" path="res://Font/FiraCode-Medium.ttf" id="5_h1ers"]
[ext_resource type="Theme" uid="uid://denljmcgguxn6" path="res://Env_vermelho.tres" id="5_lac3q"]
[ext_resource type="AudioStream" uid="uid://c1yd3mwc4lclp" path="res://Audio/sino_de_concluido.wav" id="5_pvlyj"]
[ext_resource type="AudioStream" uid="uid://ujnu1mp02vdo" path="res://Audio/rejeitado.wav" id="6_ha5di"]
[ext_resource type="AudioStream" uid="uid://kwvr15luq0in" path="res://Audio/KeyPress/keypress-001.wav" id="11_2feb3"]
[ext_resource type="AudioStream" uid="uid://0u84mac8ftmc" path="res://Audio/KeyPress/keypress-002.wav" id="12_nsnlo"]
[ext_resource type="AudioStream" uid="uid://dlpvsknqag14w" path="res://Audio/KeyPress/keypress-003.wav" id="13_f6k76"]
[ext_resource type="AudioStream" uid="uid://dled6p1ifd6sr" path="res://Audio/KeyPress/keypress-004.wav" id="14_ahadr"]
[ext_resource type="AudioStream" uid="uid://biy0hr3e74yl4" path="res://Audio/KeyPress/keypress-005.wav" id="15_t5f0j"]
[ext_resource type="AudioStream" uid="uid://msy68t7ijis6" path="res://Audio/KeyPress/keypress-006.wav" id="16_5to1s"]
[ext_resource type="AudioStream" uid="uid://3ue1go168jly" path="res://Audio/KeyPress/keypress-007.wav" id="17_vue57"]
[ext_resource type="AudioStream" uid="uid://ga6f4oe5byyk" path="res://Audio/KeyPress/keypress-008.wav" id="18_oqa6t"]
[ext_resource type="AudioStream" uid="uid://dhkv6t41ofemm" path="res://Audio/KeyPress/keypress-009.wav" id="19_it7ux"]
[ext_resource type="AudioStream" uid="uid://80yjvw5rbnf2" path="res://Audio/KeyPress/keypress-010.wav" id="20_pbecw"]

[sub_resource type="CanvasTexture" id="CanvasTexture_dty8m"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x0xpo")

[node name="ToolHandler" type="CanvasLayer" parent="."]
script = ExtResource("2_31xt7")

[node name="YesNoTool" type="Button" parent="ToolHandler"]
offset_left = 34.0
offset_top = 37.0
offset_right = 131.0
offset_bottom = 91.0
text = "Verification
Tool"

[node name="Quit" type="Button" parent="ToolHandler"]
offset_left = 66.0
offset_top = 578.0
offset_right = 108.0
offset_bottom = 609.0
theme = ExtResource("3_1rns0")
icon = SubResource("CanvasTexture_dty8m")

[node name="ApplicationHandler" type="CanvasLayer" parent="."]
script = ExtResource("3_6aesa")

[node name="AcceptButton" type="Button" parent="ApplicationHandler"]
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("4_8eunh")

[node name="RejectButton" type="Button" parent="ApplicationHandler"]
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("5_lac3q")

[node name="AcceptedSound" type="AudioStreamPlayer2D" parent="ApplicationHandler"]
stream = ExtResource("5_pvlyj")
volume_db = 7.505

[node name="RejectedSound" type="AudioStreamPlayer2D" parent="ApplicationHandler"]
stream = ExtResource("6_ha5di")

[node name="DialogHandler" type="CanvasLayer" parent="."]
script = ExtResource("4_l3v62")

[node name="Filter" type="ColorRect" parent="DialogHandler"]
visible = false
color = Color(0.180392, 0.180392, 0.180392, 0.556863)

[node name="MouseCatcher" type="Button" parent="DialogHandler"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 0

[node name="DialogBorder" type="ColorRect" parent="DialogHandler"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 1, 1)

[node name="DialogBg" type="ColorRect" parent="DialogHandler/DialogBorder"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.941176)

[node name="Dialog" type="RichTextLabel" parent="DialogHandler/DialogBorder/DialogBg"]
layout_mode = 2
offset_left = 4.0
offset_top = 27.0
offset_right = 5.0
offset_bottom = 27.0
theme_override_fonts/normal_font = ExtResource("5_h1ers")
theme_override_font_sizes/normal_font_size = 25
fit_content = true

[node name="SoundContainer" type="Control" parent="DialogHandler"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="KeyPressSound1" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("11_2feb3")

[node name="KeyPressSound2" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("12_nsnlo")

[node name="KeyPressSound3" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("13_f6k76")

[node name="KeyPressSound4" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("14_ahadr")

[node name="KeyPressSound5" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("15_t5f0j")

[node name="KeyPressSound6" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("16_5to1s")

[node name="KeyPressSound7" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("17_vue57")

[node name="KeyPressSound8" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("18_oqa6t")

[node name="KeyPressSound9" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("19_it7ux")

[node name="KeyPressSound10" type="AudioStreamPlayer2D" parent="DialogHandler/SoundContainer"]
stream = ExtResource("20_pbecw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.32549, 0.866667, 0.552941, 1)

[node name="ToolBar" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 170.0
offset_bottom = 648.0
color = Color(0.196078, 0.537255, 0.337255, 1)

[node name="dayLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1058.0
offset_top = 50.0
offset_right = 1098.0
offset_bottom = 73.0

[node name="pointLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="timeLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Window" type="Window" parent="."]
initial_position = 1
visible = false

[connection signal="dialog_begin" from="." to="ToolHandler" method="_on_dialog_begin"]
[connection signal="dialog_begin" from="." to="ApplicationHandler" method="_on_dialog_begin"]
[connection signal="dialog_begin" from="." to="DialogHandler" method="_on_dialog_begin"]
[connection signal="pressed" from="ToolHandler/YesNoTool" to="ToolHandler" method="_on_YesNoTool_pressed"]
[connection signal="pressed" from="ToolHandler/Quit" to="ToolHandler" method="_on_QuitButton_pressed"]
[connection signal="app_processed" from="ApplicationHandler" to="." method="_compute_points"]
[connection signal="next_day" from="ApplicationHandler" to="." method="_pass_day"]
[connection signal="mouse_entered" from="ApplicationHandler/AcceptButton" to="ApplicationHandler" method="_entered" binds= [1]]
[connection signal="mouse_exited" from="ApplicationHandler/AcceptButton" to="ApplicationHandler" method="_exited"]
[connection signal="pressed" from="ApplicationHandler/AcceptButton" to="ApplicationHandler" method="process_application"]
[connection signal="mouse_entered" from="ApplicationHandler/RejectButton" to="ApplicationHandler" method="_entered" binds= [2]]
[connection signal="mouse_exited" from="ApplicationHandler/RejectButton" to="ApplicationHandler" method="_exited"]
[connection signal="pressed" from="ApplicationHandler/RejectButton" to="ApplicationHandler" method="process_application"]
[connection signal="dialog_end" from="DialogHandler" to="ToolHandler" method="_on_dialog_end"]
[connection signal="dialog_end" from="DialogHandler" to="ApplicationHandler" method="_on_dialog_end"]
